deploy: williamteo/william-teo@0750df86aefe12f2866cb503afdbe3d5026f2f4c

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 &nbsp;|&nbsp;<i class="fas fa-clock"></i>&nbsp;6&nbsp;minutes
 &nbsp;|&nbsp;<i class="fas fa-user"></i>&nbsp;William Teo</span></p><div class=post-entry>On 16 December 2022, I attended Georgia Tech&rsquo;s Commencement ceremony at Bobby Dodd Stadium and walked across the stage to receive my Master of Science in Computer Science diploma.
 My Master of Science in Computer Science diploma (Since Georgia Tech doesn&rsquo;t show your specialization except in your transcript, and doesn&rsquo;t confer academic honors to Master students, can I quickly state for the record that I specialized in Machine Learning and had a 4.
-<a href=https://williamteo.github.io/2023/01/i-got-out/ class=post-read-more>[Read More]</a></div><div class=blog-tags><a href=https://williamteo.github.io//tags/omscs/>OMSCS</a>&nbsp;</div></article><article class=post-preview><a href=https://williamteo.github.io/2021/05/hello-maths/><h2 class=post-title>Hello Maths</h2><h3 class=post-subtitle>Testing rendering of math questions</h3></a><p class=post-meta><span class=post-meta><i class="fas fa-calendar"></i>&nbsp;Posted on May 16, 2021
-&nbsp;(Last updated on January 27, 2023)
+<a href=https://williamteo.github.io/2023/01/i-got-out/ class=post-read-more>[Read More]</a></div><div class=blog-tags><a href=https://williamteo.github.io//tags/omscs/>OMSCS</a>&nbsp;</div></article><article class=post-preview><a href=https://williamteo.github.io/2021/05/hello-maths/><h2 class=post-title>Hello Maths</h2><h3 class=post-subtitle>Testing rendering of math equations</h3></a><p class=post-meta><span class=post-meta><i class="fas fa-calendar"></i>&nbsp;Posted on May 16, 2021
+&nbsp;(Last updated on January 30, 2023)
 &nbsp;|&nbsp;<i class="fas fa-clock"></i>&nbsp;1&nbsp;minutes
 &nbsp;|&nbsp;<i class="fas fa-user"></i>&nbsp;William Teo</span></p><div class=post-entry><p>This is an inline equation. $\exists x \forall y$ <em>s.t.</em> $x=y$</p><p>A block equation is shown below:
 $$
 \exists x \forall \textit{ s.t. } x=y
 $$</p></div><div class=blog-tags><a href=https://williamteo.github.io//tags/maths/>maths</a>&nbsp;
-<a href=https://williamteo.github.io//tags/equations/>equations</a>&nbsp;</div></article></div></div></div></div><div class=page-meta></div><footer><div class=container><div class=row><div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1"><ul class="list-inline text-center footer-links"><li><a href=https://linkedin.com/in/willteo title=LinkedIn><span class="fa-stack fa-lg"><i class="fas fa-circle fa-stack-2x"></i>
+<a href=https://williamteo.github.io//tags/equations/>equations</a>&nbsp;</div></article></div></div></div></div><div class=page-meta>(Last updated on January 30, 2023)</div><footer><div class=container><div class=row><div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1"><ul class="list-inline text-center footer-links"><li><a href=https://linkedin.com/in/willteo title=LinkedIn><span class="fa-stack fa-lg"><i class="fas fa-circle fa-stack-2x"></i>
 <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i></span></a></li><li><a href=/index.xml title=RSS><span class="fa-stack fa-lg"><i class="fas fa-circle fa-stack-2x"></i>
 <i class="fas fa-rss fa-stack-1x fa-inverse"></i></span></a></li></ul><p class="credits copyright text-muted"><a href=https://www.william-teo.com>William Teo</a>
 &nbsp;&bull;&nbsp;&copy;
